objects/Apttus__Agreement_Clause__c.object
<CustomObject>
    <description>Represents a clause associated with an agreement</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inserted</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>R00N50000001os4tEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__AlternateClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause used to replace the the Standard Clause</description>
        <inlineHelpText>ID of the clause used to replace the the Standard Clause</inlineHelpText>
        <label>Alternate Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>AgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Definitions</fullName>
                </value>
                <value>
                    <fullName>Disclosure</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property Claims</fullName>
                </value>
                <value>
                    <fullName>License Grant</fullName>
                </value>
                <value>
                    <fullName>License Restrictions</fullName>
                </value>
                <value>
                    <fullName>Limitation of Liability</fullName>
                </value>
                <value>
                    <fullName>Maintenance / Support</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Term and Termination</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Warranties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Clause__c</fullName>
        <label>Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Comments2__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus__Comments__c</fullName>
        <label>Comments (Deprecated)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <description>ID of the associated content</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the associated content</inlineHelpText>
        <label>Content</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DiffText2__c</fullName>
        <description>The clause diff text</description>
        <inlineHelpText>The clause diff text</inlineHelpText>
        <label>Diff Text</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus__DiffText__c</fullName>
        <description>The clause diff text</description>
        <label>Diff Text (Deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Materially_Significant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Materially Significant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__PrevText__c</fullName>
        <description>The clause previous text</description>
        <label>Previous Text</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__PreviousVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previous version of agreement clause</description>
        <inlineHelpText>Previous version of agreement clause</inlineHelpText>
        <label>Previous Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Previous Version Agreement Clauses</relationshipLabel>
        <relationshipName>PreviousAgreementClauseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__PrimordialVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the first version of agreement clause</description>
        <inlineHelpText>Lookup to the first version of agreement clause</inlineHelpText>
        <label>Primordial Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Agreement Clauses (Primordial Agreement Clause)</relationshipLabel>
        <relationshipName>PrimordialAgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>The clause subcategory</description>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipName>R00N50000001os4wEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Text__c</fullName>
        <description>The clause text</description>
        <label>Text</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001os53EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates Associated Document Version ID</description>
        <inlineHelpText>Indicates Associated Document Version ID</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>AgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agreement Clause</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>